# fastapiminiproject

./: .env  .env.dev  .gitignore  Makefile  README.md  aerich.ini  aerich1.ini  main.py  pyproject.toml  pytest.ini  settings.py  test.md  test1.py
app/: main.py
app/api/core/: config.py  security.py
app/api/db/: database.py
app/api/migrations/models/: 0_20250901113454_init.py
app/api/models/: __init__.py  diary.py  emotion.py  notification.py  revoked_token.py  tag.py  token_blacklist.py  user.py
app/api/repositories/: diary_repo.py  tag_repo.py  token_blacklist_repo.py  token_repo.py  user_repo.py
app/api/repositories/db/: token_blacklist_repo.py  user_repo.py
app/api/repositories/memory/: tag_repo.py  token_blacklist_repo.py  user_repo.py
app/api/schemas/: __init__.py  diary.py  user.py
app/api/services/: ai_provider.py
app/api/v1/: __init__.py  urls.py
app/api/v1/ai/: endpoints.py  urls.py
app/api/v1/auth/: endpoints.py  urls.py
app/api/v1/diary/: endpoints.py  urls.py
app/api/v1/notify/: endpoints.py  urls.py
app/api/v1/tag/: endpoints.py  urls.py
app/api/v1/users/: endpoints.py  urls.py
migrations/models/: 0_20250829185922_init.py  1_20250826012424_None.py  1_20250827145214_None.py  2_20250826013111_update.py  2_20250828113542_None.py  3_20250828113803_update.py  4_20250828135438_update.py  5_20250828153958_update.py
tests/: conftest.py  helpers.py  test_auth.py  test_tags.py  test_users.py
