version = "0.1.0"
readme = "README.md"

[tool.aerich]
tortoise_orm = "app.api.db.database.TORTOISE_CONFIG"
location = "app/api/migrations"
models = ["app.api.models", "aerich.models"]

[tool.uv.workspace]
members = [
    "fastapiminiproject",
]

[project]
name = "fastapiminiproject"
version = "0.1.0"
dependencies = [
    "anyio>=4.10.0",
    "asgi-lifespan>=2.1.0",
    "email-validator>=2.3.0",
    "google-generativeai>=0.6.0",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "tomlkit>=0.13.3",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "aerich==0.7.1",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.11",
    "tortoise-orm>=0.25.1",
    "uvicorn>=0.35.0",
]
prod = [
    "aerich>=0.7.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "tortoise-orm>=0.25.1",
    "uvicorn>=0.35.0",
]
